@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/flim/flim-1.14.8.ebuild,v 1.3 2007/03/30 20:05:46 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/flim/flim-1.14.8.ebuild,v 1.4 2007/04/23 09:49:58 opfer Exp $
 
 EAPI="prefix"
 
@@ -15,13 +15,12 @@ SRC_URI="ftp://ftp.m17n.org/pub/mule/flim/flim-1.14/${P}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~x86 ~ppc-macos ~amd64"
-DEPEND="virtual/emacs
-	!virtual/flim
+DEPEND="!virtual/flim
 	>=app-emacs/apel-10.3"
 
 PROVIDE="virtual/flim"
 
-SITEFILE=60flim-gentoo.el
+SITEFILE=60${PN}-gentoo.el
 
 src_compile() {
 	emake PREFIX="${ED}/usr" \
